# Ev0

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml  dokploy.yml
backend/: .env.example  .gitignore  Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py
backend/app/: __init__.py  config.py  db.py  main.py  worker.py
backend/app/api/: health.py  pricing.py  recommendations.py
backend/app/backtest/: __init__.py  engine.py
backend/app/ingestion/: fixtures.py  odds.py  player_stats.py  soccerdata_sync.py  storage.py
backend/app/models/: __init__.py  base.py  fixtures.py  odds.py  players.py  recommendations.py
backend/app/pricing/: __init__.py  assist.py  goalscorer.py
backend/app/services/: recommendation_service.py
backend/app/strategy/: __init__.py  selector.py
backend/tests/: __init__.py  test_backtest.py  test_ingestion_fixtures.py  test_ingestion_odds.py  test_ingestion_player_stats.py  test_pricing_assist.py  test_pricing_goalscorer.py  test_strategy.py
docs/: 00-overview.md  01-architecture.md  02-data-sources.md  03-modeling.md  04-odds-normalization.md  05-backtesting.md  06-execution.md  06-strategy.md  07-risk-management.md  08-monitoring.md  09-ui-ux.md  10-api-spec.md  11-database-schema.md  12-dev-setup.md  13-security-compliance.md  14-roadmap-todo.md  15-glossary.md  16-testing.md  17-prd.md  18-data-contracts.md  20-roadmap-future.md  data-dictionary.md  tech-stack.md
frontend/: .env.example  Dockerfile  package-lock.json  package.json
ops/: README.md  (+1 more)
(+19 files in other folders)
